# HelloCpp17

./: README.md  build.sh  cleanup.sh  configure.ac
src/: Makefile.am  main.cpp  test.cpp  test.hpp
